# Goodie

./: .gitignore  BUILD_GUIDE.md  CONFIGURATION.md  README.md  build.py  pyproject.toml  requirements.txt  setup.py
goodie/: __init__.py  config.py  main.py  model_manager.py
