[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goodie-ai-assistant"
version = "1.0.0"
description = "GOODIE AI Assistant - Desktop companion powered by Qwen3 4B"
requires-python = ">=3.9"
authors = [
    {name = "Infrea", email = "info@goodie.ai"},
]
license = {text = "MIT"}
keywords = ["ai", "assistant", "desktop", "productivity", "qwen"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9+",
]

dependencies = [
    "llama-cpp-python>=0.2.0",
    "faster-whisper>=0.10.0",
    "piper-tts>=1.2.0",
    "pyaudio>=0.2.13",
    "pydantic>=2.0",
    "httpx>=0.24.0",
    "pynput>=1.7.6",
    "pywin32>=305",
    "pillow>=10.0.0",
]

[project.urls]
Repository = "https://github.com/infrea/Goodie"
Issues = "https://github.com/infrea/Goodie/issues"
Documentation = "https://github.com/infrea/Goodie/wiki"

[project.scripts]
goodie = "goodie.main:main"

[tool.setuptools]
packages = ["goodie"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
